# svg-path-editor

./: .gitignore  Dockerfile  README.md  angular.json  eslint.config.js  package-lock.json  package.json
.opencode/plans/: 1778632104216-quick-garden.md
src/: custom-theme.scss  index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  config.service.ts
src/app/canvas/: canvas.component.html  canvas.component.spec.ts  canvas.component.ts
src/app/copied-snackbar/: copied-snackbar.component.ts
src/app/expandable/: expandable.component.html  expandable.component.spec.ts  expandable.component.ts
src/app/export/: export.component.spec.ts  export.component.ts
src/app/formatter/: formatter.directive.ts
src/app/import/: import.component.spec.ts  import.component.ts
src/app/keyboard-navigable/: keyboard-navigable.directive.ts
src/app/open/: open-dialog.component.html  open.component.spec.ts  open.component.ts
src/app/path-preview/: path-preview.component.spec.ts  path-preview.component.ts
src/app/save/: save-dialog.component.html  save.component.spec.ts  save.component.ts
src/app/share/: share.component.spec.ts  share.component.ts
src/app/upload-image/: upload-image-dialog.component.html  upload-image.component.spec.ts  upload-image.component.ts
src/lib/: package.json
